client/src/index.css
/* ... */
.btn-petprofile-nav:active {
  margin: 0;
  transition: 0.1s;
}

.activeNav button, .btn-petprofile-nav:hover {
  color: var(--COLOR_CORAL);
}

.back-btn-petprofile-nav {
  background-color: var(--COLOR_CORAL);
  margin: 15px 4px;
  width: 28px;
  height: 28px;
  font-size: 18px;
  font-weight: 400;
  
  border: none !important;
  outline: none !important;
  color: var(--COLOR_DARK);
  border-radius: 100px;

  transition: 0.23s;
}

.back-btn-petprofile-nav:hover {
  color: var(--COLOR_WHITE);
  background-color: var(--COLOR_DARK);
  transition: 0.23s;
  border-radius: 100px;
}

.petProfileBody {
  background: var(--COLOR_WHITE);
  padding: 10px;
  border-radius: 3px;
}

.petProfileWindow {
  border-style: solid;
  border-color: var(--COLOR_WHITE);
  border-width: 2px 1px 2px 1px;
}

.bigFont {
  font-size: 60px;
  font-weight: 600;
}

.lbsFont {
  color: var(--COLOR_DARK);
  font-weight: 4500;
  font-size: 40px;
}

.smallFont {
  font-size: 12px;
  font-weight: 600;
}

.shadowedBox {
  box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 4px;
  border-color: white;
  border-width: 1px;
  border-style: solid;
  border-radius: 2px;
  background-color: var(--COLOR_WHITE);
}

.shadowedBoxPets {
  box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 4px;
  background-color: var(--COLOR_WHITE);
  border: 1px solid var(--COLOR_GRAY);
  border-bottom-left-radius: .25rem;
  border-bottom-right-radius: .25rem;
  border-top-width: 0px;
  padding: 15px;
}

.currentWeightBox {
  text-align: center;
  padding: 80px 0 0 0;
  margin-bottom: 20px ;
  width: 300px ;
}

.weightTableBox {
  text-align: center;
  padding: 20px 0 0 0;
  margin-bottom: 20px ;
  width: 670px;
}

.mainContent {
  margin: auto;
  position: relative;
  width: 1024px;
  padding: 14px 20px 10px 20px;
  background-color: var(--COLOR_GRAY);
}

.tableContainer {
  margin-top: 10px;
}

.nav-link {
  color: var(--COLOR_BLUE);
  font-weight: 500;
  transition: 0.1s;
}
.nav-link:hover {
  color: var(--COLOR_CORAL);
}

.nav-link.active {
  background-color: var(--COLOR_WHITE) !important;
  border-bottom-color: var(--COLOR_WHITE) !important;
  color: var(--COLOR_DARK);
}

.Icon {
  position: relative;
  top: -3px;
}

.Icon path {
  fill: var(--COLOR_DARK);
  transition: fill .15s ease-in-out !important;
}

.ProfileBtn {
  background-color: var(--COLOR_WHITE) !important;
  color: var(--COLOR_DARK) !important;
  border-color: var(--COLOR_DARK) !important;
}

.ProfileBtn:hover {
  background-color: var(--COLOR_DARK) !important;
  color: var(--COLOR_WHITE) !important;
  border-color: var(--COLOR_DARK) !important;
}

.ProfileBtn:hover svg path {
  fill: var(--COLOR_WHITE) !important;
}

.slider-close {
  max-height: 6px;
}

.slider-open {
  max-height: 60px;
}

.slider {
  animation: slideIn ease 0.5s;
  -webkit-animation: slideIn ease 0.5s;
  -moz-animation: slideIn ease 0.5s;
  -o-animation: slideIn ease 0.5s;
  -ms-animation: slideIn ease 0.5s;
}

@keyframes slideIn {
  0% {max-height: 6px;}
  100% {max-height: 60px;}
}

@-moz-keyframes slideIn {
  0% {max-height: 6px;}
  100% {max-height: 60px;}
}

@-webkit-keyframes slideIn {
  0% {max-height: 6px;}
  100% {max-height: 60px;}
}

@-o-keyframes slideIn {
  0% {max-height: 6px;}
  100% {max-height: 60px;}
}

@-ms-keyframes slideIn {
  0% {max-height: 6px;}
  100% {max-height: 60px;}
}

.slide-out {
  animation: slideOut ease 0.5s;
  -webkit-animation: slideOut ease 0.5s;
  -moz-animation: slideOut ease 0.5s;
  -o-animation: slideOut ease 0.5s;
}

@keyframes slideOut {
  0% {height: 60px;}
  100% {height: 6px;}
}

@-moz-keyframes slideOut {
  0% {height: 60px;}
  100% {height: 6px;}
}

@-webkit-keyframes slideOut {
  0% {height: 60px;}
  100% {height: 6px;}
}

@-o-keyframes slideOut {
  0% {height: 60px;}
  100% {height: 6px;}
}

@-ms-keyframes slideOut {
  0% {height: 60px;}
  100% {height: 6px;}
}

.FormSelect {
  width: 100%;
  margin-right: -50%;
  height: 40px;
}

.FormAddButton {
  display: inline-block;
  vertical-align: middle;
  padding: 2px 10px !important;
  text-align: center !important;
  background-color: var(--COLOR_WHITE) !important;
  color: var(--COLOR_DARK) !important;
  border-color: var(--COLOR_DARK) !important;
}

.FormAddButton:hover {
  background-color: var(--COLOR_DARK) !important;
  color: var(--COLOR_WHITE) !important;
  border-color: var(--COLOR_DARK) !important;
}

.FormAddButton:hover svg path {
  fill: var(--COLOR_WHITE) !important;
}

.FormAddButtonText {
  display: inline-block;
  vertical-align: middle;
  padding: 0px 0px 0px 4px;
}

.FormAddButtonIcon {
  display: inline-block;
  vertical-align: top;
  padding: 0px 2px 0px 4px;
}

.AddButtonContainer {
  width: 100%;
  margin-right: -50%;
  height: 40px;
  text-align: right;
  padding-top: 2px;
  padding-right: 8px;
}

